{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 9,
  "lineage": "6cc09adc-2e0b-e913-e4d7-7dae412c9b13",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_subnet_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715577329432:security-group/sg-02f28f14bb0713c1d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02f28f14bb0713c1d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private-subnet-sg",
            "name_prefix": "",
            "owner_id": "715577329432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "the-visualizer-app-private-subnet-sg"
            },
            "tags_all": {
              "Name": "the-visualizer-app-private-subnet-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ff4b8ca2db9c4f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_subnet_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715577329432:security-group/sg-036ecdfeb41dd2637",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-036ecdfeb41dd2637",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "public-subnet-sg",
            "name_prefix": "",
            "owner_id": "715577329432",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "the-visualizer-app-public-subnet-sg"
            },
            "tags_all": {
              "Name": "the-visualizer-app-public-subnet-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-07ff4b8ca2db9c4f5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715577329432:subnet/subnet-0cf5c665e00d74b1b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cf5c665e00d74b1b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715577329432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-visualizer-app-private-subnet-1"
            },
            "tags_all": {
              "Name": "the-visualizer-app-private-subnet-1"
            },
            "vpc_id": "vpc-07ff4b8ca2db9c4f5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715577329432:subnet/subnet-02dd74a558874cb22",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02dd74a558874cb22",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715577329432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-visualizer-app-private-subnet-2"
            },
            "tags_all": {
              "Name": "the-visualizer-app-private-subnet-2"
            },
            "vpc_id": "vpc-07ff4b8ca2db9c4f5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715577329432:subnet/subnet-00ec8ff74d63efb08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00ec8ff74d63efb08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715577329432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-visualizer-app-public-subnet-1"
            },
            "tags_all": {
              "Name": "the-visualizer-app-public-subnet-1"
            },
            "vpc_id": "vpc-07ff4b8ca2db9c4f5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715577329432:subnet/subnet-0795630ebc227cd47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0795630ebc227cd47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "715577329432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "the-visualizer-app-public-subnet-2"
            },
            "tags_all": {
              "Name": "the-visualizer-app-public-subnet-2"
            },
            "vpc_id": "vpc-07ff4b8ca2db9c4f5"
          },
          "dependencies": [
            "aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:715577329432:vpc/vpc-07ff4b8ca2db9c4f5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e9660c0845d6ed7",
            "default_route_table_id": "rtb-000ad45dd1b842a17",
            "default_security_group_id": "sg-09d59d2ecd93024e1",
            "dhcp_options_id": "dopt-02d0bff9b913121cc",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07ff4b8ca2db9c4f5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-000ad45dd1b842a17",
            "owner_id": "715577329432",
            "tags": {
              "Name": "the-visualizer-app-vpc"
            },
            "tags_all": {
              "Name": "the-visualizer-app-vpc"
            }
          }
        }
      ]
    }
  ]
}